[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "starplot"
authors = [{name = "Steve Berardi", email = "hello@steveberardi.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version", "description"]
keywords = ["astronomy", "stars", "charts", "maps", "constellations"]
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "pydantic", 
    "skyfield",
    "adjustText ",
    "cartopy",
    "geopandas",
    "pillow",
    "PyYAML",
    "PyOngc",
]

[project.urls]
Home = "https://starplot.dev"
Documentation = "https://starplot.dev"
Source = "https://github.com/steveberardi/starplot"

[tool.pytest.ini_options]
testpaths = ["./tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
ignore = ["E501"]
